tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-duplicate-field.diagnostic
diagnostic error code=T0001 family=type message="duplicate field 'x' in struct match pattern" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" display="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" bytes=183
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" line=9 column=26 end_line=9 end_column=32 byte_start=141 byte_end=147 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-duplicate-field.ari:9:26\n   |\n 9 |     Point { x: first, x: second, y } => first + second + y,\n   |                          ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" line=9 column=16 end_line=9 end_column=21 byte_start=131 byte_end=136 message="previous field 'x' pattern starts here"
  Snippet label=1 text="  --> tests/cases/match/errors/match-struct-pattern-duplicate-field.ari:9:16\n   |\n 9 |     Point { x: first, x: second, y } => first + second + y,\n   |                ^^^^^"
  Note index=0 location=none message="named product patterns check each field name once before lowering bindings"
  Help index=0 location=none message="remove the duplicate 'x' entry or merge its nested pattern with the first one"
